# reverse-k-ranks

./: .gitignore  CMakeLists.txt  DiskIndexBruteForce.cpp  IndexBruteForce.cpp  Main.cpp  MemoryIndexBruteForce.cpp  OnlineBruteForce.cpp  TODO.txt  build-performance.py  build-project.sh  build.sh  command.txt  example.py  query_distribution_build.py  readme  result-diff.py  run-compute-all-rkr.py  run-dbg-disk.py  run-dbg-other.py  run-dbg.py  run-dbg03.py  run-polyuhost.py  run-rkr.py  run-rtk.py  run-topk.py  run-wsl.py  run.py  run.sh  run_dbg_disk.py  run_dbg_other.py  run_polyuhost.py  run_rkr.py  run_rtk.py  t1_test.py  test.cpp  test2.cpp  testDistancePair.cpp  testDouble.cpp  testtopk.py  vecs_io.py
ReverseTopK/: CMakeLists.txt  P.data  W.data  dyy_RstarTree.hpp  main.cpp
attribution/: CMakeLists.txt  command.txt
attribution/DiskRead-DistanceComputation/: DiskReadVSDistanceComputation.cpp
attribution/DiskReadVSDistanceComputation/: DiskReadVSDistanceComputation.cpp
attribution/RMIPS-unstable-result/: AttributionFileIO.hpp  ReverseMIPS.cpp  ReverseMIPS.hpp
attribution/SVDcompare/: SVDcompare.cpp
attribution/bound-distribution/: BoundDistribution.cpp  readme.txt
attribution/bound-selection/: BoundSelection.cpp  TODO.txt
attribution/build-index-bound-selection/: BuildIndexIPBound.cpp  BuildIndexIPBound.hpp  ComputeAll.cpp  FileIO.hpp
attribution/build-index-bound-selection/BuildIndexIPBound/: ApproximateByNorm.hpp  FullNorm.hpp  PartDimPartInt.hpp  PartDimPartNorm.hpp
attribution/build-index-bound-selection/ComputeAllIPBound/: FullInt.hpp  Grid.hpp  ItemPQ.hpp  PartIntPartNorm.hpp  UserItemPQ.hpp
attribution/build-index-time/: BuildRankSample.hpp  CPUScoreTableMultipleThread.hpp  CPUScoreTableSingleThread.hpp  ComputeScoreTableMultipleThread.hpp  ComputeScoreTableSingleThread.hpp  FileIO.hpp  RSBuildIndexMultipleThread.cpp  RSBuildIndexSingleThread.cpp
attribution/complexity_compare/: BinarySearchComplexity.cpp  ComplexityCompareUtil.hpp  ComputeIPComplexity.cpp
attribution/compute-all/: ComputeAll.cpp  ComputeAll.hpp
attribution/compute-all/ComputeAllIPBound/: BaseIPBound.hpp  FullDim.hpp
attribution/disk-index-compression/: MeasurePruneRatio.cpp  PrintCandidates.cpp  UserDistanceDistribution.cpp  compute-size.py  false-positive-curve.py  rank-distribution.py  single-query-rank-distribution.py
attribution/disk-index-compression/measure-prune-ratio/: ScoreSample.hpp
attribution/evaluation-sequence/: CauchyPercentile.cpp  CauchyPercentile.hpp  plot_scatter.py
attribution/finish/bound-distribution/: plot.py
attribution/int-bound-compare/: IntBoundCompare.cpp
attribution/kmeans/: KMeansRunTime.cpp
attribution/memory-index-time-compare/: BruteForce.cpp  BruteForceChooseSample.cpp  BruteForceChooseSample.hpp  ComputeItemIDScoreTable.hpp  FileIO.hpp  QueryDistributionUserRank.cpp  QueryDistributionUserRank.hpp
attribution/norm-popularity-distribution/: ExactUserRank.hpp  norm_popularity_distribution.py
attribution/order-statistics-bound/: bound.py
attribution/performance-metric-relationship/: FileIO.hpp  PrintBaselinePerformanceMetric.cpp  RSCompressTopTIPBruteForce.hpp  RankSearch.hpp  TopTIP.hpp  metric_relationship.py  metric_relationship_log.py  metric_relationship_log_csv.py  metric_relationship_log_new_csv.py  refinement_comparison.py  refinement_vs_running_time.py
attribution/print-candidates/: CandidatesIO.hpp  IDIndex.hpp  OtherUsefulFunc.hpp  PrintCandidates.cpp  PruneUser.hpp  SimilarRes.py  StoreIDIndex.hpp
attribution/print-norm/: FileIO.hpp  PrintNorm.cpp
attribution/print-prune-ratio/: FileIO.hpp  PrintPruneRatio.cpp  PrintPruneRatioNoBuildIndex.cpp  QueryRankSamplePrintPruneRatio.hpp  RankSamplePrintPruneRatio.hpp  ScoreSamplePrintPruneRatio.hpp
attribution/print-user-rank/: PrintUserRank.cpp  UserRank.hpp  large_interval_rank_proportion.py  plot.py  top-rank-distribution.py  topk_rank_distribution.py  user_rank_distribution.py
attribution/prune/: IPCompare.cpp  PruneImplementation.cpp
attribution/prune-implementation/: PruneImplementation.cpp  PruneParameterClass.cpp
attribution/prune-ratio/: prune_ratio.py  rank_partition.py
attribution/query-distribution-index/: DistributionBelowTopk.cpp  FileIO.hpp  SampleRankTopKUser.cpp  create_test_dataset.py  test_query_distribution.py
attribution/risk-read-distance-computation/: DiskReadVSDistanceComputation.cpp  readme.txt
attribution/run-time/: ScoreComputeRunTime.cpp
attribution/sample-score-distribution/: ReadRankSample.cpp  SampleScoreDistribution.cpp  TestRankSampleApproach.cpp  inverse_normal_cdf.py  print_all_pdf.py  print_qrs_cdf.py  print_qrs_pdf.py  print_rs_pdf.py  print_sample_cdf.py  read_qrs_index.py
attribution/score-distribution/: ScoreDistribution.cpp  UserScoreDistribution.cpp  distribution.py  score_rank_distribution.py
attribution/score-rank-distribution/: UserScoreDistribution.cpp  fit_normal.py  fit_score_rank_curve.py  fit_weibull.py  score_rank_distribution.py
attribution/score-sample-advantage/: score-distribution.py
attribution/score-sample-reason/: FileIO.hpp  PrintRankBound.cpp  RankSamplePrintRankBound.hpp  ScoreSamplePrintRankBound.hpp
attribution/svd-compare/: plot_curve.py
attribution/test-query-rank-search/: FileIO.hpp  QueryDistributionBelowTopk.cpp  QuerySampleRankTopKUser.cpp
attribution/theory/: kth-distribution.txt  rank-distribution.py
attribution/user-candidate-appearance/: user_candidate_appearance.py
attribution/user-query-relationship/: FileIO.hpp  SampleItemTopKUser.cpp  correlation.py  topk_correlation.py  user_candidate_appearance.py  user_candidate_frequency_simulation.py
skyline-partition/: CMakeLists.txt  run_skyline_proportion.py  skyline-proportion.cpp  svd.py  test.cpp
skyline-partition/deprecated/: run-reorder.py
skyline-partition/script/: groundtruth.py  svd.py  vecs_io.py
test/: BallSearch.cpp  CMakeLists.txt  KMeans.cpp  SVD.cpp  SVDReduction.cpp
test-direct-io/: CMakeLists.txt  gen_test_file.cpp  test_open.c  test_read.c  test_read.cpp  test_read_obsolete.cpp
(+1096 files in other folders)
